really final visualizations, really

--- a/download/corpora/1Cor/Sahidica.1Cor1_chapter.html
+++ b/download/corpora/1Cor/Sahidica.1Cor1_chapter.html
@@ -25,6 +25,10 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 25, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
 
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="Paul, called to be an apostle of Jesus Christ through the will of God, and our brother Sosthenes,"><!--
 --><div class="verse" verse="1"><!--
