--- a/download/corpora/1Cor/Sahidica.1Cor2_chapter.html
+++ b/download/corpora/1Cor/Sahidica.1Cor2_chapter.html
@@ -24,6 +24,11 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 25, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="When I came to you, brothers, I didn't come with excellence of speech or of wisdom, proclaiming to you the testimony of God."><!--
 --><div class="verse" verse="1"><!--
 --><span class="word">ⲁⲛⲟⲕ</span><!-- end of "word" --><span class="word">ⲇⲉ</span><!-- end of "word" --><span class="word">ϩⲱ</span><!-- end of "word" --><span class="word">ⲛⲧⲉⲣⲓⲉⲓ</span><!-- end of "word" --><span class="word">ϣⲁⲣⲱⲧⲛ</span><!-- end of "word" --><span class="word">ⲛⲁⲥⲛⲏⲩ</span><!-- end of "word" --><span class="word">ⲛⲧⲁⲓⲉⲓ</span><!-- end of "word" --><span class="word">ϩⲛⲟⲩϫⲓⲥⲉ</span><!-- end of "word" --><span class="word">ⲁⲛ</span><!-- end of "word" --><span class="word">ⲛϣⲁϫⲉ</span><!-- end of "word" --><span class="word">ⲏ</span><!-- end of "word" --><span class="word">ⲛⲥⲟⲫⲓⲁ</span><!-- end of "word" --><span class="word">ⲉⲓϫⲱ</span><!-- end of "word" --><span class="word">ⲉⲣⲱⲧⲛ</span><!-- end of "word" --><span class="word">ⲛⲧⲙⲛⲧⲙⲛⲧⲣⲉ</span><!-- end of "word" --><span class="word">ⲙⲡⲛⲟⲩⲧⲉ</span><!-- end of "word" --><span class="word">.</span><!-- end of "word" --></div><!-- end of "verse" --></t><!-- end of "translation" --><t class="translation" title="For I determined not to know anything among you, except Jesus Christ, and him crucified."><!--
