--- a/download/corpora/1Cor/Sahidica.1Cor4_chapter.html
+++ b/download/corpora/1Cor/Sahidica.1Cor4_chapter.html
@@ -24,6 +24,11 @@
 
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 25, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="So let a man think of us as Christ's servants, and stewards of God's mysteries."><!--
 --><div class="verse" verse="1 Corinthians 4:1"><!--
 --><span class="word">ⲧⲁⲓ</span><!-- end of "word" --><span class="word">ⲧⲉ</span><!-- end of "word" --><span class="word">ⲧϩⲉ</span><!-- end of "word" --><span class="word">ⲙⲁⲣⲉⲛⲣⲱⲙⲉ</span><!-- end of "word" --><span class="word">ⲟⲡⲛ</span><!-- end of "word" --><span class="word">ϩⲱⲥ</span><!-- end of "word" --><span class="word">ϩⲩⲡⲏⲣⲉⲧⲏⲥ</span><!-- end of "word" --><span class="word">ⲙⲡⲉⲭⲣⲓⲥⲧⲟⲥ</span><!-- end of "word" --><span class="word">.</span><!-- end of "word" --><span class="word">ⲁⲩⲱ</span><!-- end of "word" --><span class="word">ⲛⲟⲓⲕⲟⲛⲟⲙⲟⲥ</span><!-- end of "word" --><span class="word">ⲛⲙⲙⲩⲥⲧⲏⲣⲓⲟⲛ</span><!-- end of "word" --><span class="word">ⲙⲡⲛⲟⲩⲧⲉ</span><!-- end of "word" --><span class="word">.</span><!-- end of "word" --></div><!-- end of "verse" --></t><!-- end of "translation" --><t class="translation" title="Here, moreover, it is required of stewards, that they be found faithful."><!--
