--- a/download/corpora/1Cor/Sahidica.1Cor3_chapter.html
+++ b/download/corpora/1Cor/Sahidica.1Cor3_chapter.html
@@ -24,6 +24,11 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 25, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 
 <div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-sahidica_1corinthians v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="Brothers, I couldn't speak to you as to spiritual, but as to fleshly, as to babies in Christ."><!--
 --><div class="verse" verse="1 Corinthians 3:1"><!--
